--- a/repo/inventory-front/.env
+++ b/repo/inventory-front/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://springbootinventory-env.eba-qbbgb3cr.us-east-2.elasticbeanstalk.com
-# REACT_APP_API_URL=http://localhost:8080
+# REACT_APP_API_URL=http://springbootinventory-env.eba-qbbgb3cr.us-east-2.elasticbeanstalk.com
+REACT_APP_API_URL=http://localhost:8080
