--- a/repo/inventory-front/package.json
+++ b/repo/inventory-front/package.json
@@ -16,10 +16,14 @@
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "dayjs": "^1.11.13",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.14.1",
